--- a/src/pages/HeroPage/HeroPage.css
+++ b/src/pages/HeroPage/HeroPage.css
@@ -29,30 +29,6 @@
   opacity: 80%;
 }
 
-.btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3.5rem;
-  width: 14rem;
-  background-color: var(--bright-red);
-  border-radius: 5px;
+.HeroPage .btn {
   margin: 3.5rem 0;
-  transition: 100ms ease-in-out;
-  position: relative;
-  top: 0px;
-}
-
-.btn:hover {
-  background-color: var(--dark-red);
-  cursor: pointer;
-  color: white;
-  top: -2px;
-}
-
-.btn > a {
-  color: white;
-  text-transform: lowercase;
-  font-weight: 300;
-  letter-spacing: 1px;
 }
