--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -1,5 +1,6 @@
 .ProjectsPage .skills {
   justify-content: left;
+  margin: 2rem 0;
 }
 
 .hidden {
@@ -18,7 +19,7 @@
 .project-element {
   align-items: center;
   justify-content: center;
-  margin: 4em auto;
+  margin: 4rem auto;
 }
 
 .project-info {
@@ -91,7 +92,7 @@
 
 #npcgen-mobile {
   width: 180px;
-  margin-right: -70px;
+  margin-right: -100px;
   margin-top: -20px;
   z-index: 2;
 }
